syntax = "proto3";

package notes;
import "google/protobuf/empty.proto";
option go_package = "./proto";

message User {
  int32 uid = 1;
  string email = 2;
  string password_md5 = 3;
}

message Note {
  int32 nid = 1;
  int32 uid = 2;
  string title = 3;
  string text = 4;
  string last_modified = 5;
}

message CreateNoteRequest {
  int32 uid = 1;
  string title = 2;
  string text = 3;
}

message UpdateNoteRequest {
  int32 nid = 1;
  int32 uid = 2;
  string title = 3;
  string text = 4;
}

message DeleteNoteRequest {
  int32 nid = 1;
  int32 uid = 2;
}

message GetNotesRequest {
  int32 uid = 1;
}

message GetNotesResponse {
  repeated Note notes = 1;
}

service NotesService {
  rpc CreateNote (CreateNoteRequest) returns (Note);
  rpc UpdateNote (UpdateNoteRequest) returns (Note);
  rpc DeleteNote (DeleteNoteRequest) returns (google.protobuf.Empty);
  rpc GetNotes (GetNotesRequest) returns (GetNotesResponse);
}
